Reduce number of newlines in settings dangerous section
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/settings.html
+++ b/html/settings.html
@@ -1097,7 +1097,7 @@ $('document').ready(function() {
                     <label>
                         <input type="checkbox" autocomplete="off" id="prefs-delete-plugins"> Delete all Plugins</input>
                     </label>
-                    <br/><br/>
+                    <br/>
                     <label>
                         To confirm, please type the word "DELETE": &nbsp;
                         <input type="text" id="prefs-delete-confirm" size="10" style="text-transform: uppercase" />
@@ -1112,13 +1112,13 @@ $('document').ready(function() {
                 <h1>Reflash controller</h1>
                 <form class="form">
                     <p>
-                        <b>Reinstall the firmware for the controller board.</b><br /><br />
+                        <b>Reinstall the firmware for the controller board.</b><br/>
                         This option is here for support reasons; If the power to your device was cut while installing the controller firmware,
-                        your device may end up in a state where the controller is not fully functional.<br /><br />
-                        While the reflashing is happening, please DO NOT DISCONNECT THE POWER to the device. <br />
+                        your device may end up in a state where the controller is not fully functional.<br/>
+                        <br />
+                        While the reflashing is happening, please DO NOT DISCONNECT THE POWER to the device.<br/>
                         There is a RISK OF BRICKING THE DEVICE if the power is cut.
                     </p>
-                    <br/>
                     <label>
                         To confirm, please type the word "REFLASH": &nbsp;
                         <input type="text" id="prefs-reflash-confirm" size="10" style="text-transform: uppercase" />
