--- a/html/settings.html
+++ b/html/settings.html
@@ -753,6 +753,13 @@ $('document').ready(function() {
         })
     });
 
+    $("#form-action-delete").click(function() {
+        if ($("#prefs-delete-confirm").val().toUpperCase() == "DELETE") {
+            $("#button-action-delete").click();
+        }
+        return false;
+    });
+
     // ----------------------------------------------------------------------------------------------------------------
     // --- HMI Reflash
 
@@ -775,19 +782,38 @@ $('document').ready(function() {
     $("#button-action-reflash").click(function() {
         var block = show_blocker("reflash");
 
-        // NOTE; we cant really check when it is done since we need to stop ourselves in order to flash HMI
-        // So we fake it, giving a reasonable amount of time for the operation to complete
-        setTimeout(function () {
-            block.html('<p>Controller reflash complete!</p>')
+        var checkAlive = function() {
+            $.ajax({
+                url: '/hello',
+                method: 'GET',
+                cache: false,
+                global: false,
+                timeout: 1000,
+                success: function() {
+                    block.html('<p>Controller reflash complete!</p>')
 
-            var re = $("<div class='button icon'>Reload</div>").appendTo(block);
-            re.css("background-image", "url(img/icons/25/reload.png)");
-            re.click(function () { location.reload(); });
-        }, 45000);
+                    var re = $("<div class='button icon'>Reload</div>").appendTo(block);
+                    re.css("background-image", "url(img/icons/25/reload.png)");
+                    re.click(function () { location.reload(); });
+                },
+                error: function() {
+                    setTimeout(checkAlive, 2000);
+                },
+            })
+        }
+
+        // Check if mod-ui is alive after 30 seconds
+        setTimeout(checkAlive, 30000);
 
         enable_service("hmi-update", true, false, false);
     });
 
+    $("#form-action-reflash").click(function() {
+        if ($("#prefs-reflash-confirm").val().toUpperCase() == "REFLASH") {
+            $("#button-action-reflash").click();
+        }
+        return false;
+    });
 
     // ----------------------------------------------------------------------------------------------------------------
     // --- Device Updates
@@ -897,7 +923,7 @@ $('document').ready(function() {
                         <input type="checkbox" autocomplete="off" id="prefs-bluetooth-custom">
                             Use custom Bluetooth device name: &nbsp;
                         </input>
-                        <input type="text" value="" id="prefs-bluetooth-name" disabled></input>
+                        <input type="text" value="" id="prefs-bluetooth-name" autocomplete="off" disabled></input>
                     </label>
                 </form>
 
@@ -1100,13 +1126,14 @@ $('document').ready(function() {
                     <br/>
                     <label>
                         To confirm, please type the word "DELETE": &nbsp;
-                        <input type="text" id="prefs-delete-confirm" size="10" style="text-transform: uppercase" />
+                        <input type="text" id="prefs-delete-confirm" autocomplete="off" size="10" style="text-transform: uppercase" />
                     </label>
                     <br/>
                     <label>
                         <input type="button" id="button-action-delete" value="Delete"></input>
                     </label>
                     <br/>
+                    <input type="submit" id="form-action-delete" style="display: none;"></input>
                 </form>
 
                 <h1>Reflash controller</h1>
@@ -1121,13 +1148,15 @@ $('document').ready(function() {
                     </p>
                     <label>
                         To confirm, please type the word "REFLASH": &nbsp;
-                        <input type="text" id="prefs-reflash-confirm" size="10" style="text-transform: uppercase" />
+                        <input type="text" id="prefs-reflash-confirm" size="10" style="text-transform: uppercase" autocomplete="off" />
                     </label>
                     <br/>
                     <label>
                         <input type="button" id="button-action-reflash" value="Reflash"></input>
                     </label>
                     <br/>
+                    <input type="submit" id="form-action-reflash" style="display: none;"></input>
+                </form>
             </div>
         </div>
         <!-- SETTINGS PAGE (DANGEROUS) -->
