Remove a newline from settings
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/settings.html
+++ b/html/settings.html
@@ -1108,7 +1108,7 @@ $('document').ready(function() {
                 <h1>Cleanup</h1>
                 <form class="form">
                     <p>
-                        <b>Delete selected user data from the device.</b><br /><br />
+                        <b>Delete selected user data from the device.</b><br />
                         This will PERMANENTLY DELETE the selected USER DATA. This action is IRREVERSIBLE.
                         The device won't work properly until new items are created or installed.
                     </p>
