Fix Labs plugin install and authenticate Labs requests
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -165,7 +165,7 @@ $('document').ready(function() {
     }
 
     if ({{using_mod}}) {
-        desktop.authenticateDevice(function (ok) {
+        desktop.authenticateDevice(false, function (ok) {
             if (ok) {
                 console.log("MOD authentication succeeded")
                 desktop.resetPedalboardStats();
