Add non-installed plugin store filter
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -706,6 +706,10 @@ $('document').ready(function() {
                     <input type="checkbox" name="installed" id="cloud-plugins-installed" />
                     <label for="cloud-plugins-installed">Installed only</label>
                 </div>
+                <div class="control-group">
+                    <input type="checkbox" name="non-installed" id="cloud-plugins-non-installed" />
+                    <label for="cloud-plugins-non-installed">Non-Installed only</label>
+                </div>
                 <div class="control-group mod-hidden">
                     <div class="switch" id="cloud-plugins-source">
                       <input type="radio" id="cloud-radio-official" name="plugins-source" value="official" checked="checked">
