--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -60,6 +60,25 @@
                 </div>
             </div>
             {{/path}}
+            {{#control}}
+            {{^toggled}}
+            <div class="mod-knob">
+                <span class="mod-knob-title">{{shortName}}</span>
+                <span class="mod-knob-min-value" mod-role="input-control-minimum" mod-parameter-uri="{{uri}}"></span>
+                <span class="mod-knob-max-value" mod-role="input-control-maximum" mod-parameter-uri="{{uri}}"></span>
+                <span class="mod-knob-current-value" mod-role="input-parameter-value" mod-parameter-uri="{{uri}}"></span>
+                <div class="mod-knob-image" mod-role="input-parameter" mod-parameter-uri="{{uri}}" mod-widget="film"></div>
+                <div class="mod-address" mod-role="input-parameter-address" mod-parameter-uri="{{uri}}"></div>
+            </div>
+            {{/toggled}}
+            {{#toggled}}
+            <div class="mod-switch">
+                <span class="mod-switch-title">{{shortName}}</span>
+                <div class="mod-switch-image" mod-role="input-parameter" mod-port-uri="{{uri}}" mod-widget="film"></div>
+                <div class="mod-address" mod-role="input-parameter-address" mod-port-uri="{{uri}}"></div>
+            </div>
+            {{/toggled}}
+            {{/control}}
             {{/effect.parameters}}
 
             {{#effect.ports.control.input}}
