Fix settings panel for boolean parameters
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -74,8 +74,8 @@
             {{#toggled}}
             <div class="mod-switch">
                 <span class="mod-switch-title">{{shortName}}</span>
-                <div class="mod-switch-image" mod-role="input-parameter" mod-port-uri="{{uri}}" mod-widget="film"></div>
-                <div class="mod-address" mod-role="input-parameter-address" mod-port-uri="{{uri}}"></div>
+                <div class="mod-switch-image" mod-role="input-parameter" mod-parameter-uri="{{uri}}" mod-widget="film"></div>
+                <div class="mod-address" mod-role="input-parameter-address" mod-parameter-uri="{{uri}}"></div>
             </div>
             {{/toggled}}
             {{/control}}
