Some small adjustments needed for dwarf
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -160,6 +160,11 @@ $('document').ready(function() {
         desktop.pedalboardModified = true
     }
 
+    if (!{{codec_truebypass}}) {
+        $('#mod-bypassLeft').hide()
+        $('#mod-bypassRight').hide()
+    }
+
     if ({{using_app}}) {
         desktop.setupApp()
     }
