--- a/html/index.html
+++ b/html/index.html
@@ -162,6 +162,11 @@ $('document').ready(function() {
         desktop.pedalboardModified = true
     }
 
+    if (!{{codec_truebypass}}) {
+        $('#mod-bypassLeft').hide()
+        $('#mod-bypassRight').hide()
+    }
+
     if ({{using_app}}) {
         desktop.setupApp()
     }
