Support string parameters, overall finishing and cleanup

--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -50,6 +50,7 @@
             <!-- END PRESET LIST -->
 
             {{#effect.parameters}}
+            {{#writable}}
             {{#path}}
             <div class="mod-enumerated mod-file-list">
                 <span class="mod-enumerated-title">{{label}}</span>
@@ -60,6 +61,14 @@
                 </div>
             </div>
             {{/path}}
+            {{#string}}
+            <div class="mod-string">
+                <span class="mod-string-title">{{label}}</span>
+                <div class="mod-string-content" mod-role="input-parameter" mod-parameter-uri="{{uri}}" mod-widget="string">
+                    <span class="mod-string-value" mod-role="input-parameter-value" mod-parameter-uri="{{uri}}"></span>
+                </div>
+            </div>
+            {{/string}}
             {{#control}}
             {{^toggled}}
             <div class="mod-knob">
@@ -77,6 +86,7 @@
             </div>
             {{/toggled}}
             {{/control}}
+            {{/writable}}
             {{/effect.parameters}}
 
             {{#effect.ports.control.input}}
