Remove useless pages_n/cb from hw desc, use addressing_pages name

--- a/html/index.html
+++ b/html/index.html
@@ -79,8 +79,7 @@
     var DEFAULT_PEDALBOARD = '{{default_pedalboard}}'
     var FAVORITES = {{favorites}}
     var PREFERENCES = {{preferences}}
-    var PAGES_NB = {{pages_nb}}
-    var PAGES_CB = {{pages_cb}}
+    var ADDRESSING_PAGES = {{addressing_pages}}
     var DEBUG = true;
     if (!DEBUG) {
         console = console || {}
