Fix window title for several save dialogs
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -345,7 +345,7 @@ $('document').ready(function() {
         <!-- SAVE SNAPSHOTS WINDOW -->
         <div id="save-preset" class="save-popup mod-hidden" style="z-index:1001;">
             <div class="mod-box">
-                <h1 class="pull-left">Saving Snapshot</h1><span class="js-cancel-saving close">&times;</span>
+                <h1 class="pull-left">Saving</h1><span class="js-cancel-saving close">&times;</span>
                 <form class="bottom">
                     <div class="clearfix"></div>
                     <div class="controls">
