If running behind a proxy, prepend a base path to all ajax calls.

--- a/html/index.html
+++ b/html/index.html
@@ -264,6 +264,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/utils/janus.js?v={{version}}"></script>
 <script type="text/javascript" src="js/streaming.js?v={{version}}"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/6.4.0/adapter.min.js" ></script>
+<script type="text/javascript" src="js/online.js?v={{version}}"></script>
 
 </head>
 <!-- END HEAD -->
