Use textarea for string parameters instead of span
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -65,7 +65,7 @@
             <div class="mod-string">
                 <span class="mod-string-title">{{label}}</span>
                 <div class="mod-string-content" mod-role="input-parameter" mod-parameter-uri="{{uri}}" mod-widget="string">
-                    <span class="mod-string-value" mod-role="input-parameter-value" mod-parameter-uri="{{uri}}"></span>
+                    <textarea autocomplete=off spellcheck=false class="mod-string-value" mod-role="input-parameter-value" mod-parameter-uri="{{uri}}"></span>
                 </div>
             </div>
             {{/string}}
