Fix pedalboard snapshots text highlight, close rename with esc
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -548,7 +548,7 @@ $('document').ready(function() {
                 <form class="bottom">
                     <div class="controls clearfix">
                         <input type="text" name="pedal-presets-list" value="" id="pedal-presets-list-input"/>
-                        <select class="preset-list" size="9" id="pedal-presets-list" style="background-color:inherit;"></select>
+                        <select class="preset-list" size="9" id="pedal-presets-list"></select>
                     </div>
                     <div class="controls actions">
                         <button class="js-rename btn btn-default">Rename</button>
