Fix reference to MOD Labs where beta plugins should be used instead
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -391,7 +391,7 @@ $('document').ready(function() {
             <div class="box">
                 <h1 class="pull-left">SHARE</h1><span class="js-cancel close">&times;</span>
                 <div class="unstable-warning mod-hidden">
-                  <b>Warning:</b> This pedalboard contains MOD Labs plugins and won't be available to most users
+                  <b>Warning:</b> This pedalboard contains beta plugins plugins and won't be available to most users
                 </div>
                 <form>
                     <div class="clearfix"></div>
