--- a/html/index.html
+++ b/html/index.html
@@ -64,7 +64,8 @@
     PLUGINS_URL      = '{{plugins_url}}'
     PEDALBOARDS_URL  = '{{pedalboards_url}}'
     PEDALBOARDS_LABS_URL  = '{{pedalboards_labs_url}}'
-    CONTROLCHAIN_URL = '{{controlchain_url}}'
+    CONTROLCHAIN_URL  = '{{controlchain_url}}'
+    FILE_MANAGER_PORT = '{{file_manager_port}}'
     LV2_PLUGIN_DIR   = '{{lv2_plugin_dir}}'
     VERSION          = '{{version}}'
     BIN_COMPAT       = '{{bin_compat}}'
