Tweak release update wording
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -901,7 +901,11 @@ $('document').ready(function() {
                     Update version <b>0.0.0</b>.<br/>
                     Released on 0000-00-00.
                 </p>
-                <p>For more information about this release <a href="#" target="_blank">click here</a>.</p>
+                <p>
+                    Curious about this release? Check out
+                    <a href="#" target="_blank">this forum post</a>
+                    where you can read more details and discuss with our community.
+                </p>
                 <p class="textright">
                     <button class="js-close btn btn-xs btn-danger">Cancel</button>
                     <button class="js-upgrade btn btn-xs btn-info">Download</button>
