Less wasted space on bottom bar for store.html
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/store.html
+++ b/html/store.html
@@ -171,6 +171,11 @@ function makeCloudPluginBox (el, trigger) {
     #cloud-plugins-library {
         display: block !important;
     }
+    #cloud-plugins-library,
+    #cloud-plugins-library .filter,
+    #cloud-plugins-library .cloud-plugins {
+        bottom: 5px;
+    }
 </style>
 
 </head>
