MIDI Loopback implementation
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -533,6 +533,13 @@ $('document').ready(function() {
                   <fieldset>
                     <div>
                       <label>
+                        <input type="checkbox" autocomplete="off" id="midi-loopback">
+                            Enable MIDI Loopback
+                        </input>
+                      </label>
+                    </div>
+                    <div>
+                      <label>
                         <input type="radio" autocomplete="off" name="midi-mode" value="aggregated" id="midi-mode-aggregate">
                             Aggregated mode
                         </input>
