--- a/html/index.html
+++ b/html/index.html
@@ -486,7 +486,7 @@ $('document').ready(function() {
                 <h1 class="top bottom {{titleblend}}">{{fulltitle}}</h1>
                 <div class="actions">
                     <button class="js-cv-addressing" id="js-cv-addressing-toggle">Manage CV Ports</button>
-                    <div class="mod-hidden" id="js-preset-menu">
+                    <div id="js-preset-menu" style="display:inline-block;">
                         <button class="js-preset menu-trigger">Snapshots</button>
                         <ul class="drop-menu clearfix js-pedalboard-presets-menu" style="cursor:pointer;">
                             <li class="js-preset-save">Save</li>
